# PolysolveLib

./: README.md  pyproject.toml
.github/workflows/: test_florp.yml
docs/source/: conf.py  usage.rst
polysolve/: solver.py
polysolve.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_quadratic.py
